Email - added icons, multiselect
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@18225 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/skins/default/css/admin.css
+++ b/uvm-lib/servlets/webui/root/skins/default/css/admin.css
@@ -192,6 +192,12 @@ button.testIcon {
 button.actionIcon {
     background:transparent url(../images/admin/icon_action.gif) no-repeat center left !important; 
 }
+button.purgeIcon {
+	background:transparent url(../images/admin/icon_purge.png) no-repeat center left !important; 
+}
+button.detailIcon {
+	background:transparent url(../images/admin/icon_detail.png) no-repeat center left !important; 
+}
 div.windowContent {
 	position:relative;
 	margin-top:10px;
