--- a/gui/api/com/untangle/gui/install/InstallDiskJPanel.form
+++ b/gui/api/com/untangle/gui/install/InstallDiskJPanel.form
@@ -5,6 +5,10 @@
     <Property name="opaque" type="boolean" value="false"/>
   </Properties>
   <AuxValues>
+    <AuxValue name="FormSettings_generateMnemonicsCode" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
+    <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
     <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,-47,0,0,2,65"/>
   </AuxValues>
 
@@ -27,7 +31,9 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="&lt;html&gt;This list shows the boot disks that were found.  &lt;font color=&quot;#FF0000&quot;&gt;Please choose a disk for the Untangle Platform installation.  Warning, all the data on the boot disk you select will be deleted.&lt;/font&gt;&lt;/html&gt;"/>
+            <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="Util.tr(&quot;&lt;html&gt;This list shows the boot disks that were found.  &lt;font color=&apos;#FF0000&apos;&gt;Please choose a disk for the Untangle Platform installation.  Warning, all the data on the boot disk you select will be deleted.&lt;/font&gt;&lt;/html&gt;&quot;)" type="code"/>
+            </Property>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
