--- a/gui/api/com/untangle/gui/install/InstallLicenseJPanel.form
+++ b/gui/api/com/untangle/gui/install/InstallLicenseJPanel.form
@@ -35,7 +35,9 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="&lt;html&gt;License Agreement&lt;/html&gt;"/>
+            <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="Util.tr(&quot;License Agreement&quot;)" type="code"/>
+            </Property>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
@@ -81,7 +83,7 @@
     <Component class="javax.swing.JLabel" name="backgroundJPabel">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/com/untangle/gui/login/ProductShot.png"/>
+          <Image iconType="3" name="/com/untangle/gui/install/ProductShot.png"/>
         </Property>
       </Properties>
       <Constraints>
