Rename modules to have the same name as the Debian package & extract new keys - in progress
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@18551 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/mail-casing/servlets/quarantine/root/request.jspx
+++ b/mail-casing/servlets/quarantine/root/request.jspx
@@ -10,7 +10,7 @@
     <![CDATA[
              request.setAttribute( "bs", com.untangle.uvm.LocalUvmContextFactory.context().brandingManager().getBaseSettings());
              request.setAttribute( "ss", com.untangle.uvm.LocalUvmContextFactory.context().skinManager().getSkinSettings()); 
-             request.setAttribute( "i18n_map", com.untangle.uvm.LocalUvmContextFactory.context().languageManager().getTranslations("mail_casing")); 
+             request.setAttribute( "i18n_map", com.untangle.uvm.LocalUvmContextFactory.context().languageManager().getTranslations("untangle-casing-mail")); 
     ]]>
   </jsp:scriptlet>  
 
