Rename modules to have the same name as the Debian package & extract new keys - in progress * incorporate Ken's script to extract keys from jspx files
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@18573 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/mail-casing/servlets/quarantine/root/inbox.jspx
+++ b/mail-casing/servlets/quarantine/root/inbox.jspx
@@ -13,16 +13,12 @@
   </jsp:scriptlet>  
 
   <c:set var="title" scope="request">
-    <uvm:i18n>
-      Quarantine Digest for:
-    </uvm:i18n>
+    <uvm:i18n>Quarantine Digest for:</uvm:i18n>
   </c:set>
   <br/><span style="font-weight: bold;">${currentAddress}</span>
 
   <c:set var="pageTitle" scope="request">
-    <uvm:i18n p0="${bs.companyName}" p1="${currentAddress}">
-      {0} | Quarantine Digest for: {1}
-    </uvm:i18n>
+    <uvm:i18n p0="${bs.companyName}" p1="${currentAddress}">{0} | Quarantine Digest for: {1}</uvm:i18n>
   </c:set>
 
   <c:set var="javascript" scope="request">
