--- a/mail-casing/servlets/quarantine/root/InvalidPortalEmail.jspx
+++ b/mail-casing/servlets/quarantine/root/InvalidPortalEmail.jspx
@@ -26,49 +26,57 @@
 
   <jsp:scriptlet>
     <![CDATA[
+             request.setAttribute( "bs", com.untangle.uvm.LocalUvmContextFactory.context().brandingManager().getBaseSettings());
+             request.setAttribute( "ss", com.untangle.uvm.LocalUvmContextFactory.context().skinManager().getSkinSettings()); 
              request.setAttribute( "i18n_map", com.untangle.uvm.LocalUvmContextFactory.context().languageManager().getTranslations("untangle-casing-mail")); 
     ]]>
   </jsp:scriptlet>  
 
   <c:set var="title" scope="request">
-    <uvm:i18n>Quarantine Digest for:</uvm:i18n>
+    <uvm:i18n>Request Quarantine Digest Email</uvm:i18n>
   </c:set>
-  <br/><span style="font-weight: bold;">${currentAddress}</span>
 
   <c:set var="pageTitle" scope="request">
-    <uvm:i18n p0="${bs.companyName}" p1="${currentAddress}">{0} | Quarantine Digest for: {1}</uvm:i18n>
+    <uvm:i18n p0="${bs.companyName}" p1="${currentAddress}">{0} | Request Quarantine Digest Email</uvm:i18n>
   </c:set>
 
   <c:set var="javascript" scope="request">
-    <uvm:inlineScript>
-      <![CDATA[
-               var inboxDetails = {
-                   token : '${currentAuthToken}',
-                   totalCount: ${q:totalMessageCount(pageContext)},
-                   address : '${currentAddress}',
-
-                   /* This is the address the message is remapped to */
-                   forwardAddress : '${q:remappedTo(pageContext, false )}',
-                   
-                   /* This is the number of days a message will be saved in the quarantine for */
-                   quarantineDays : ${q:maxDaysToIntern( pageContext )},
-
-                   safelistData : ${q:jsonSafelist(pageContext)},
-               
-                   remapsData : ${q:jsonReceivingRemaps(pageContext)}
-               }
-      ]]>
-    </uvm:inlineScript>
-
-    <!-- Libraries for the quarantine application -->
-    <uvm:script src="quarantine.js"/>
-    <uvm:script src="safelist.js"/>
-    <uvm:script src="remaps.js"/>
+    <uvm:script src="request.js"/>
     <uvm:script src="/script/i18n.js"/>
   </c:set>
   
   <c:set var="content" scope="request">
-    <div id="quarantine-tab-panel"><!-- jspx --></div>
+    <p>
+      Your Remote Access Portal login has been configured without an
+      email address or with an incorrect email address.
+    </p>
+      
+    <p>
+      If your company uses Active Directory, please contact your
+      system administrator to configure your Active Directory Server
+      account with your correct email address.
+    </p>
+    
+    <p>
+      If your company uses Local LDAP Directory, please contact your
+      system administrator to configure your Local LDAP Directory
+      account with your correct email address.
+    </p>
+    
+    <p>
+      Alternatively, please enter your email address into the form
+      below and click <code>Request</code>.  You will receive an email
+      message containing a list of your recent quarantined emails and
+      a link to your quarantined email page.
+    </p>
+    <p>
+      When you receive this email message, you can release or delete
+      your quarantined emails from this list or access your
+      quarantined email page from your browser to release or delete
+      your quarantined emails.
+    </p>
+
+    <div id="quarantine-request-digest"><!-- jspx --></div>
   </c:set>
   
   <jsp:forward page="/template.jspx"/>
