Fixing the blockpages for firefox 3.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@19022 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/blockpage/root/blockpage_template.jspx
+++ b/uvm-lib/servlets/blockpage/root/blockpage_template.jspx
@@ -24,7 +24,7 @@
     </uvm:inlineScript>
     
     <c:if test="${!empty javascript_file}">
-      <script type="text/javascript" src="${javascript_file}"></script>
+      <script type="text/javascript" src="${javascript_file}"><!-- --></script>
     </c:if>
 
     <c:out escapeXml="false" value="${javascript}"/>
