--- a/mail-casing/servlets/quarantine/root/inbox.jspx
+++ b/mail-casing/servlets/quarantine/root/inbox.jspx
@@ -31,7 +31,7 @@
   </jsp:scriptlet>  
 
   <c:set var="title" scope="request">
-    <uvm:i18n>Quarantine Digest for:</uvm:i18n>
+    <uvm:i18n p0="${currentAddress}">Quarantine Digest for: {0}</uvm:i18n>
   </c:set>
   <br/><span style="font-weight: bold;">${currentAddress}</span>
 
