Resolving some quarantine issues, Closes: #4634 Closes: #5168
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@20083 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/mail-casing/servlets/quarantine/root/request.jspx
+++ b/mail-casing/servlets/quarantine/root/request.jspx
@@ -43,6 +43,12 @@
   <c:set var="javascript" scope="request">
     <uvm:script src="request.js"/>
     <uvm:script src="/script/i18n.js"/>
+
+    <uvm:inlineScript>
+      <![CDATA[
+               var requestMessageCode = '${requestMessageCode}';
+      ]]>
+    </uvm:inlineScript>
   </c:set>
   
   <c:set var="content" scope="request">
