--- a/mail-casing/servlets/quarantine/root/template.jspx
+++ b/mail-casing/servlets/quarantine/root/template.jspx
@@ -68,8 +68,8 @@
 
     <!-- This is used in the CSS Zen Garden -->
     <!-- These extra divs/spans may be used as catch-alls to add extra imagery. -->
-    <div id="extraDiv1"><span><!-- jspx --></span></div>
-    <div id="extraDiv2"><span><!-- jspx --></span></div>
+    <div id="extra-div-1"><span><!-- jspx --></span></div>
+    <div id="extra-div-2"><span><!-- jspx --></span></div>
     <div id="extraDiv3"><span><!-- jspx --></span></div>
     <div id="extraDiv4"><span><!-- jspx --></span></div>
     <div id="extraDiv5"><span><!-- jspx --></span></div>
