--- a/uvm-lib/servlets/blockpage/root/blockpage_template.jspx
+++ b/uvm-lib/servlets/blockpage/root/blockpage_template.jspx
@@ -75,8 +75,8 @@
       </div>
 
       <!-- These extra divs/spans may be used as catch-alls to add extra imagery. -->
-      <div id="extraDiv1"><span></span></div>
-      <div id="extraDiv2"><span></span></div>
+      <div id="extra-div-1"><span></span></div>
+      <div id="extra-div-2"><span></span></div>
       <div id="extraDiv3"><span></span></div>
       <div id="extraDiv4"><span></span></div>
       <div id="extraDiv5"><span></span></div>
