fix for skin refactor
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@20214 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/blockpage/root/blockpage_template.jspx
+++ b/uvm-lib/servlets/blockpage/root/blockpage_template.jspx
@@ -77,10 +77,10 @@
       <!-- These extra divs/spans may be used as catch-alls to add extra imagery. -->
       <div id="extra-div-1"><span></span></div>
       <div id="extra-div-2"><span></span></div>
-      <div id="extraDiv3"><span></span></div>
-      <div id="extraDiv4"><span></span></div>
-      <div id="extraDiv5"><span></span></div>
-      <div id="extraDiv6"><span></span></div>
+      <div id="extra-div-3"><span></span></div>
+      <div id="extra-div-4"><span></span></div>
+      <div id="extra-div-5"><span></span></div>
+      <div id="extra-div-6"><span></span></div>
     </div>
   </body>
 </html>
