Changing openvpn to always use the modules i18n.  Changing openvpn to properly display the 'active connection' when a user is connected.  Changing the blockpages to return a different message when connecting to an expired blockpage.  Fixing the blockpage to properly handle long URLS.  Closes: #5293 Closes: #5270
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@20283 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/blockpage/root/blockpage_template.jspx
+++ b/uvm-lib/servlets/blockpage/root/blockpage_template.jspx
@@ -17,9 +17,9 @@
     
     <uvm:inlineScript>
       <![CDATA[
-               var nonce = '${param.nonce}';
-               var tid = '${param.tid}';
-               var url = ${url};
+          var nonce = '${param.nonce}';
+          var tid = '${param.tid}';
+          var url = '${bd.url}';
       ]]>
     </uvm:inlineScript>
     
