adding favicon reference to blockpage
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@23019 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/blockpage/root/blockpage_template.jspx
+++ b/uvm-lib/servlets/blockpage/root/blockpage_template.jspx
@@ -11,7 +11,7 @@
   <jsp:directive.page contentType="text/html"/>
 
   <head>
-    <link rel="icon"  type="image/png" href="/images/block-favicon.png">  
+    <link rel="icon"  type="image/png" href="/images/block-favicon.png"/>  
     <title><c:out value="${pageTitle}"/></title>
 
     <uvm:skin src="user.css" name="${ss.userPagesSkin}"/>
