adding ie8 support for bug 6550
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@24010 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/mail-casing/servlets/quarantine/root/template.jspx
+++ b/mail-casing/servlets/quarantine/root/template.jspx
@@ -31,7 +31,7 @@
 
   <head>
     <title><c:out value="${pageTitle}"/></title>
-
+    <META content="IE=7.0000" http-equiv="X-UA-Compatible"/>
     <style type="text/css">
       @import "/ext/resources/css/ext-all.css";
     </style>
