--- a/mail-casing/servlets/quarantine/root/request.jspx
+++ b/mail-casing/servlets/quarantine/root/request.jspx
@@ -33,7 +33,7 @@
   </jsp:scriptlet>  
 
   <c:set var="title" scope="request">
-    <uvm:i18n>Request Quarantine Digest Email</uvm:i18n>
+    <uvm:i18n>Request Quarantine Digest Emails</uvm:i18n>
   </c:set>
 
   <c:set var="pageTitle" scope="request">
