--- a/uvm-lib/servlets/blockpage/root/blockpage_template.jspx
+++ b/uvm-lib/servlets/blockpage/root/blockpage_template.jspx
@@ -11,6 +11,7 @@
   <jsp:directive.page contentType="text/html"/>
 
   <head>
+    <META content="IE=7.0000" http-equiv="X-UA-Compatible"/>  
     <link rel="icon"  type="image/png" href="/images/block-favicon.png"/>  
     <title><c:out value="${pageTitle}"/></title>
 
