--- a/uvm-lib/servlets/blockpage/root/simple.jspx
+++ b/uvm-lib/servlets/blockpage/root/simple.jspx
@@ -11,7 +11,7 @@
 
   <head>
     <title><c:out value="${pageTitle}"/></title>
-
+    <META content="IE=7.0000" http-equiv="X-UA-Compatible"/>
     <style type="text/css">
       @import "skins/second/css/ext-skin.css";
       @import "skins/second/css/skin.css";
