creating the basic parts for the password field on the blockpage.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@24603 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/blockpage/root/blockpage_template.jspx
+++ b/uvm-lib/servlets/blockpage/root/blockpage_template.jspx
@@ -66,6 +66,10 @@
           </button>
         </c:if>
 
+        <c:if test="${!empty additional_fields}">
+          ${additional_fields}
+        </c:if>
+
         <p class="contact">
           <span>${contact}</span>
         </p>
